[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/art/wasps/hand_open.png" type="Texture" id=1]
[ext_resource path="res://assets/art/wasps/hand_hold.png" type="Texture" id=2]
[ext_resource path="res://scenes/tasks/plants/GrabHand.gd" type="Script" id=3]
[ext_resource path="res://assets/sfx/wasps/grab_fruit.wav" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "berry",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 42, 551 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 72.0064
height = 165.064

[sub_resource type="CircleShape2D" id=4]
radius = 129.139

[sub_resource type="AudioStreamRandomPitch" id=5]
audio_stream = ExtResource( 4 )

[node name="GrabHand" type="Area2D" groups=["hand"]]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
flip_h = true

[node name="ColorRect" type="ColorRect" parent="AnimatedSprite"]
margin_left = -41.0
margin_top = 133.0
margin_right = 45.0
margin_bottom = 1237.0
color = Color( 0.8, 0.615686, 0.431373, 1 )

[node name="Line2D" type="Line2D" parent="AnimatedSprite"]
position = Vector2( -2, 0 )
points = PoolVector2Array( -40, 152, -40, 1240, 48, 1240, 48, 141 )
width = 5.0
default_color = Color( 0, 0, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 690 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -12, 0 )
rotation = -0.197908
shape = SubResource( 3 )

[node name="ShakeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 15, 8 )
shape = SubResource( 4 )

[node name="ITimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="IFlashTimer" type="Timer" parent="."]
wait_time = 0.15

[node name="GrabSFX" type="AudioStreamPlayer" parent="."]
stream = SubResource( 5 )
bus = "SFX"

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="ITimer" to="." method="_on_ITimer_timeout"]
[connection signal="timeout" from="IFlashTimer" to="." method="_on_IFlashTimer_timeout"]
